# VKCrawler

./: .gitattributes  .gitignore  .travis.yml  README.md  build.sbt  roadmap.xmind
Analizers/: README.md  fh.scala  horo-shell.scala  wall_posts_word_count.scala
Analizers/MongoScripts/: friends_list_dyn.mongo.js
CrawlerAgents/: README.md
CrawlerAgents/AkkaStreams/: build.sbt
CrawlerAgents/AkkaStreams/project/: Build.scala
CrawlerAgents/AkkaStreams/src/main/scala/: Application.scala
CrawlerAgents/Casablanca/: CMakeLists.txt
CrawlerAgents/Casablanca/src/: friends_list.cpp  user_info.cpp
CrawlerAgents/Native/: .gitignore  CMakeLists.txt  README.md
CrawlerAgents/Native/App/: CMakeLists.txt  Crawler.properties
CrawlerAgents/Native/App/include/: PluginsCache.h  TaskNotifications.h  WEBGetTask.h  WorkerTask.h
CrawlerAgents/Native/App/src/: App.cpp  PluginsCache.cpp  WEBGetTask.cpp  WorkerTask.cpp
CrawlerAgents/Native/FakeFriendsAndInfoPlugin/: CMakeLists.txt
CrawlerAgents/Native/FakeFriendsAndInfoPlugin/include/: FakeFriendsAndInfoPlugin.h
CrawlerAgents/Native/FakeFriendsAndInfoPlugin/src/: FakeFriendsAndInfoPlugin.cpp
CrawlerAgents/Native/FriendsListCrawlPlugin/: CMakeLists.txt
CrawlerAgents/Native/FriendsListCrawlPlugin/include/: FriendsListCrawlPlugin.h
CrawlerAgents/Native/FriendsListCrawlPlugin/src/: FriendsListCrawlPlugin.cpp
CrawlerAgents/Native/Plugin/: CMakeLists.txt
CrawlerAgents/Native/Plugin/include/: Plugin.h
CrawlerAgents/Native/Plugin/src/: Plugin.cpp
CrawlerAgents/Native/VS/: Crawler.sln
CrawlerAgents/Native/VS/Crawler/: Crawler.vcxproj  Crawler.vcxproj.filters
CrawlerAgents/Native/VS/FakeFriendsAndInfoPlugin/: FakeFriendsAndInfoPlugin.vcxproj  FakeFriendsAndInfoPlugin.vcxproj.filters
CrawlerAgents/Native/VS/FriendsListCrawlPlugin/: FriendsListCrawlPlugin.vcxproj  FriendsListCrawlPlugin.vcxproj.filters
CrawlerAgents/Native/VS/Plugin/: Plugin.vcxproj  Plugin.vcxproj.filters
CrawlerAgents/Native/WallPlugin/: CMakeLists.txt
CrawlerAgents/Native/WallPlugin/include/: WallPlugin.h
CrawlerAgents/Native/WallPlugin/src/: WallPlugin.cpp
CrawlerAgents/Native/config/: example.properties
CrawlerAgents/Scala/: .gitignore  README.md  build.sbt
CrawlerAgents/Scala/src/main/scala/: CrawlerAgent.scala  UserCrawler.scala
CrawlerAgents/WebInterface/: README.md  build.sbt
CrawlerAgents/WebInterface/src/main/scala/: Application.scala
CrawlerAgents/js/: README.md  VKCrawlerAgent.html  VKCrawlerAgent.js
CrawlerAgents/node.js/: README.md
CrawlerAgents/node.js/TestCrawlers/: README.md  crawler1.node.js  crawler2.node.js  crawler3.node.js  crawler4.node.js
CrawlerAgents/vkcrawler_akka_streams_http/: build.sbt
CrawlerAgents/vkcrawler_akka_streams_http/src/main/scala-2.11/: mainObj.scala
Database/: README.md  scripts.js
ES/: wall_posts_mapping.json
Logstash/: vkcrawler_user_info_es.conf  vkcrawler_user_info_mongo.conf  vkcrawler_wall_posts_es.conf  vkcrawler_wall_posts_mongo.conf
Refineries/: README.MD  README.md
Refineries/InfoNGraphRefiner/: .gitignore  build.sbt
Refineries/InfoNGraphRefiner/src/main/resources/: application.conf
Refineries/InfoNGraphRefiner/src/main/scala/: Application.scala  Refiner.scala
Refineries/MongoScripts/: FriendsList.mongo.js
Refineries/Scala/: build.sbt
Refineries/Scala/src/main/resources/: application.conf
Refineries/Scala/src/main/scala/: Application.scala  Refiner.scala  WebControlService.scala
Refineries/WallPostsRefiner/: build.sbt
Refineries/WallPostsRefiner/src/main/Resources/: application.conf
Refineries/WallPostsRefiner/src/main/scala/: Application.scala
Scripts/: init.sh  init_mongo.js  start_bfs.sh  start_web.sh
TaskMasters/: README.md
TaskMasters/FLNGTaskMaster/: README.md  build.sbt
TaskMasters/FLNGTaskMaster/project/: plugins.sbt
TaskMasters/FLNGTaskMaster/src/main/resources/: application.conf
TaskMasters/FLNGTaskMaster/src/main/scala/: Application.scala
TaskMasters/FriendsListTaskMaster/: README.md  build.sbt
TaskMasters/MongoScripts/: FriendsList.mongo.js
TaskMasters/UserTaskMaster/: README.md  build.sbt
TestDB/: README.md  scripts.js
WebInterface/: .gitignore  README.md  build.sbt
WebInterface/src/main/resources/: application.conf
WebInterface/src/main/scala/: Application.scala  DataModel.scala  Handler.scala  MongoDBSource.scala  SprayJsonSupport.scala
WebInterface/src/test/scala/: BaseSpec.scala  RoutePathsSpec.scala
bfs/: .gitignore  README.MD  build.sbt
bfs/project/: plugins.sbt
bfs/src/main/resources/: application.conf  bfs.conf  exchange.conf  graph.conf  queue.conf  reference.conf  used.conf
bfs/src/test/scala/: BFSSpec.scala  ExchangeRabbitIntergation.scala  ExchangeSpec.scala  GraphSaverMongoDBIntegration.scala  GraphSaverNeo4jIntegration.scala  GraphSpec.scala  JedisUsedIntergration.scala  LocalUsedSpec.scala  MongoPersistanceSpecConfiguration.scala  MongoRichQueueSpec.scala  PersistanceSpecConfiguration.scala  PersistantUsedSpec.scala  PersistentUsedSpec.scala  QueueESIntegration.scala  QueueMongoDBIntegration.scala  QueueSpec.scala  ReliableBFSSpec.scala  ReliableExchangeSpec.scala  ReliableGraphSpec.scala  ReliableMessagingSpec.scala  ReliableQueueSpec.scala  RichQueuePersistenceSpec.scala  RichQueueSpec.scala  Spec.scala  UsedRedisIntergration.scala  WholeIntegrationSpec.scala  WholeSpec.scala
lib/DataScheme/: build.sbt
lib/Services/: build.sbt
project/: Build.scala  plugins.sbt
prototype/: README.MD  build.sbt
prototype/src/main/resources/: application.conf  bfs.conf  graph.conf
prototype/src/test/scala/: BFSSpec.scala  ExchangeRabbitIntergation.scala  ExchangeSpec.scala  GraphSaverMongoDBIntegration.scala  GraphSpec.scala  LocalUsedSpec.scala  PersistanceSpecConfiguration.scala  PersistantUsedSpec.scala  QueueMongoDBIntegration.scala  QueueSpec.scala  ReliableBFSSpec.scala  ReliableExchangeSpec.scala  ReliableGraphSpec.scala  ReliableMessagingSpec.scala  ReliableQueueSpec.scala  Spec.scala  UsedRedisIntergration.scala  WholeIntegrationSpec.scala  WholeSpec.scala
(+39 files in other folders)
